--- a/data/config.exampe.json
+++ b/data/config.exampe.json
@@ -1,5 +1,11 @@
 {
-    "Token": "token",
-    "ClientID": "bot_client_id",
-    "ownerID": "bot_owner_id"
+  "Token": "token",
+  "ClientID": "bot_client_id",
+  "ownerID": "bot_owner_id",
+
+  "mysql_host": "",
+  "mysql_port": "",
+  "mysql_user": "",
+  "mysql_password": "",
+  "mysql_database": ""
 }
