--- a/data/config.exampe.json
+++ b/data/config.exampe.json
@@ -1,11 +1,12 @@
 {
-  "Token": "token",
-  "ClientID": "bot_client_id",
-  "ownerID": "bot_owner_id",
+  "TToken": "test bot token",
+  "TClientID": "test bot id",
+  "TownerID": "test bot owner id",
 
-  "mysql_host": "",
-  "mysql_port": "",
-  "mysql_user": "",
-  "mysql_password": "",
-  "mysql_database": ""
+  "Token": "bot token",
+  "ClientID": "bot id",
+  "ownerID": "bot owner id",
+  
+  "mongodb_url": "mongodb url",
+  "mongodb_pass": "mongo db password"
 }
