--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "canvas": "^2.11.0",
     "discord.js": "^14.7.1",
-    "mysql": "^2.18.1"
+    "mongodb": "^5.0.1"
   }
 }
