--- a/data/config.exampe.json
+++ b/data/config.exampe.json
@@ -5,8 +5,5 @@
 
   "Token": "bot token",
   "ClientID": "bot id",
-  "ownerID": "bot owner id",
-  
-  "mongodb_url": "mongodb url",
-  "mongodb_pass": "mongo db password"
+  "ownerID": "bot owner id"
 }
