--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@prisma/client": "^5.13.0",
     "canvas": "^2.11.2",
     "chokidar": "^3.6.0",
-    "discord.js": "^14.15.2",
+    "discord.js": "^14.17.2",
     "nodemon": "^3.1.0",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "zod": "^3.24.1"
   }
 }
